--- a/package.json
+++ b/package.json
@@ -5,18 +5,30 @@
   "dependencies": {
     "firebase": "^4.6.2",
     "md5": "^2.2.1",
-    "moment": "^2.19.2",
+    "moment": "^2.24.0",
     "react": "^16.1.1",
     "react-big-calendar": "^0.17.0",
     "react-dialog": "^1.0.2",
     "react-dom": "^16.1.1",
     "react-popup": "^0.8.0",
-    "react-scripts": "1.0.16"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
